# Supercomputing

10-alto-nivel-omp/: CMakeCache.txt  exemplo-fs.cpp
13-14-sincronizacao/: C  CP  CP_teste.cpp  PC  PCC  cond_var  cond_var.cpp  fila_infinita  pandoc.py  prod_cons  prod_cons.cpp  rdv  rdv.cpp  rdv_sem  rdv_sem.cpp  roteiro.md  semaphore.cpp  thread1  thread1.cpp
Aula01/: a.out  tarefa2  tarefa2.cpp
Aula02/: tarefa3  tarefa3.cpp
Aula03/: exemplo2-threads.cpp  exemplo2_threads  exemploreal  exemploreal.cpp
Aula05/: pi-omp-critical copy.cpp  pi-omp-critical_copy  pi-omp-critical_copy.cpp
Aula06/: pi_mc.c  pi_mc.cpp  pi_mc2.cpp  pi_mc_random  random.cpp  random.h
Aula12/: CMakeLists.txt
P1/visualizador2/: CMakeCache.txt  CMakeLists.txt  Makefile  backup.cpp  cmake_install.cmake  entrada_bolas.txt  entrada_bolas2.txt  entrada_bolas3.txt  entrada_bolas5.txt  entrada_bolasx.txt  main.cpp  visualizador  visualizador.cpp  visualizador.h  visualizador_nao  visualizador_nao.cpp  visualizador_parallel  visualizador_parallel.cpp
Projeto 1/: Projeto1  Projeto1.cpp
Projeto 1/visualizador copy/: CMakeCache.txt  CMakeLists.txt  GUI.txt  Makefile  Projeto1  Projeto1.cpp  Projeto1.h  ballhitball.cpp  body.h  cmake_install.cmake  entrada_bolas.txt  entrada_bolas1x.txt  entrada_bolas2x.txt  entrada_bolas3.txt  entrada_bolas4.txt  entrada_teste.txt  main.cpp  visualizador  visualizador.cpp  visualizador.h  visualizador_nao  visualizador_nao.cpp  visualizador_parallel  visualizador_parallel.cpp
visualizador/: CMakeCache.txt  CMakeLists.txt  COLLISIONS_n.txt  GUI.txt  Makefile  Projeto1.cpp  cmake_install.cmake  entrada_bolas.txt  entrada_bolas5.txt  main.cpp  main_paralle.cpp  teste_unit.txt  visualizador  visualizador.cpp  visualizador.h  visualizador_nao  visualizador_nao.cpp  visualizador_parallel  visualizador_parallel.cpp
